2007-01-30  Don Allingham  <don@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: error reporting
	* src/plugins/NarrativeWeb.py: error reporting

2007-01-30  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version.

2007-01-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ScratchPad.py: Fix crash in GrampsType escaping;
	Additional tooltips for more objects.

2007-01-29  Benny Malengier  <benny.malengier@ugent.be>
	* src/DataViews/_PersonView.py: numlock handling
	* src/PageView.py: numlock handling
	* src/Filters/_SearchBar.py: numlock handling
	* src/Filters/SideBar/_SidebarFilter.py: numlock handling

2007-01-29  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: refactoring
	* src/DisplayModels/_PeopleModel.py: refactoring
	* src/DisplayModels/_BaseModel.py: Refactor out node/path maps
	* various: remove sets import
	* NEWS: update
	* configure.in: update to 2.2.6
	* src/ReportBase/_ReportOptions.py: fix landscape saving.

2007-01-28  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (_init_lists): Change Undo History binding to
	Ctrl+H because AltH was colliding with Help menu shortcut.
	* NEWS: Update.

2007-01-27  Don Allingham  <don@gramps-project.org>
	* src/ReportBase/_ReportOptions.py: (#877) escape XML constructs
	* src/BaseDoc.py: escape XML constructs
	* src/DataViews/_PersonView.py: add enter to collapse row as well

2007-01-27  Benny Malengier  <benny.malengier@ugent.be>
	* src/DataViews/_PersonView.py: add enter to expand a tree row
	
2007-01-27  Don Allingham  <don@gramps-project.org>
	* src/PageView.py: add key accelerators
	* src/ViewManager.py: block interface on autobackup (#856), add key
	accelerators
	* src/DisplayState.py: block interface on autobackup
	* src/Utils.py: handle missing/invalid encoding
	* src/DisplayModels/_BaseModel.py: handle None vs. 0
	* src/Editors/_EditPerson.py (EditPerson._image_button_press): check
	for window already being open (#882)
