@@ -414,11 +414,11 @@ class DisplayChart(ManagedWindow.ManagedWindow):
 
         f.set_current_folder(os.getcwd())
         status = f.run()
-        name = unicode(f.get_filename(),
-                       sys.getfilesystemencoding())
-        f.destroy()
+        f.hide()
 
         if status == gtk.RESPONSE_OK:
+            name = unicode(f.get_filename(),
+                           sys.getfilesystemencoding())
             pstyle = BaseDoc.PaperStyle("junk",10,10)
             doc = ODSDoc.ODSDoc(pstyle,BaseDoc.PAPER_PORTRAIT)
             doc.creator(self.db.get_researcher().get_name())
@@ -444,6 +444,7 @@ class DisplayChart(ManagedWindow.ManagedWindow):
                 spreadsheet.write_table_data(top,skip_columns)
 
             spreadsheet.finalize()
+        f.destroy()
 
 #------------------------------------------------------------------------
 #
