@@ -1,4 +1,5 @@
 2007-01-30  Don Allingham  <don@gramps-project.org>
+	* src/plugins/EventCmp.py: (#886) properly handle CANCEL on save dialog
 	* src/ReportBase/_ReportDialog.py: error reporting
 	* src/plugins/NarrativeWeb.py: error reporting
 
